# melancholy

./: CMakeSettings.json  README.txt
courses/PV112/template/: CMakeLists.txt  application.cpp  application.hpp
courses/PV112/template/objects/: bench_frame.mtl  bench_wood.mtl  building_far.mtl  building_left.mtl  building_right_back.mtl  building_right_center.mtl  building_right_front.mtl  ford.mtl  ford_chrom.mtl  ford_karoserie.mtl  ford_podvozek.mtl  ford_sklo.mtl  inner_lights.mtl  interior.mtl  lamp.mtl  lamp_glass.mtl  pickup.mtl  pickup_karoserie.mtl  pickup_okna.mtl  pickup_podvozek.mtl  pickup_seda.mtl  pickup_svetla.mtl  sign.mtl  skybox.mtl  taillights.mtl  turn_signals.mtl  wall_back.mtl  wall_front.mtl
courses/PV112/template/objects/building1/: ac.mtl  cihly.mtl  door.mtl  door2.mtl  ramy.mtl  store.mtl  top.mtl  vydech.mtl  w2.mtl  wf.mtl  window1.mtl  window2.mtl  window2_lit.mtl  window3.mtl  window3_lit.mtl
courses/PV112/template/objects/building2/: brick.mtl  door.mtl  top.mtl  window.mtl
courses/PV112/template/objects/building3/: ramy.mtl  schody.mtl  zdi.mtl
courses/PV112/template/objects/building4/: bocni_okna.mtl  budova_bez_kravin.mtl  cihly.mtl  dvere.mtl  kraje.mtl  okna.mtl  top.mtl  vysoke_okna.mtl
courses/PV112/template/objects/building5/: cihly.mtl  paint.mtl
courses/PV112/template/shaders/: instantiated.frag  instantiated.vert  main.frag  main.vert
framework/geometry/src/: geometry.cpp  geometry_base.cpp
framework/gui/include/: action.h  camera.h  gui_application.h
framework/gui/src/: camera.cpp
(+3 files in other folders)
